--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dependencies": {
         "@radix-ui/react-slot": "^1.1.1",
         "@supabase/ssr": "^0.5.2",
+        "@types/fluent-ffmpeg": "^2.1.27",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "fluent-ffmpeg": "^2.1.3",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.474.0",
         "next": "15.1.6",
