--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@codemirror/lang-javascript": "^6.2.2",
+        "@codemirror/theme-one-dark": "^6.1.2",
         "@radix-ui/react-slot": "^1.1.1",
         "@supabase/ssr": "^0.5.2",
         "@types/fluent-ffmpeg": "^2.1.27",
+        "@uiw/react-codemirror": "^4.23.8",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "fluent-ffmpeg": "^2.1.3",
