--- a/package.json
+++ b/package.json
@@ -11,22 +11,28 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@ai-sdk/google": "^1.1.11",
+        "@ai-sdk/react": "^1.1.12",
         "@codemirror/lang-javascript": "^6.2.2",
         "@codemirror/theme-one-dark": "^6.1.2",
         "@radix-ui/react-slot": "^1.1.1",
         "@supabase/ssr": "^0.5.2",
         "@types/fluent-ffmpeg": "^2.1.27",
         "@uiw/react-codemirror": "^4.23.8",
+        "ai": "^4.1.35",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "dedent": "^1.5.3",
         "fluent-ffmpeg": "^2.1.3",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.474.0",
         "next": "15.1.6",
+        "openai": "^4.84.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^3.0.1",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
